--- a/config.json
+++ b/config.json
@@ -1,14 +1,12 @@
 {
-  "title": "title",
-  "description": "description",
-  "author": "author",
+  "title": "Photos",
+  "description": "随手一拍",
+  "author": "Kirovj",
   "children": [
     {
-        "url": "url"
-    },
-    {
-        "title": "title",
-        "url": "url"
+      "title": "test image",
+      "description": "test",
+      "url": "https://phoho-shanghai-1256254782.cos.ap-shanghai.myqcloud.com/IMG_117.JPEG"
     }
   ]
 }
