--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     {
       "title": "test image",
       "description": "test",
-      "url": "https://phoho-shanghai-1256254782.cos.ap-shanghai.myqcloud.com/IMG_117.JPEG"
+      "url": "https://photo.wuyiting.cn/IMG_117.JPEG"
     }
   ]
 }
