--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
     {
       "title": "test image",
       "description": "test",
+      "date": "2022/5/30",
       "url": "https://photo.wuyiting.cn/IMG_117.JPEG"
     }
   ]
