--- a/config.json
+++ b/config.json
@@ -261,7 +261,7 @@
     },
     {
       "title": "骑行",
-      "description": "像少年般飞驰",
+      "description": "像少年啦飞驰",
       "url": "https://photo.wuyiting.cn/%E9%AA%91%E8%A1%8C/%E8%A5%BF%E6%B9%96_2021-09-20_14-57-25.jpg",
       "children": [
         {
