--- a/config.json
+++ b/config.json
@@ -9,11 +9,14 @@
       "url": "https://photo.wuyiting.cn/2021-11-%E6%9D%AD%E5%B7%9E-%E5%8D%97%E6%B9%96/DSC_3534.JPG",
       "children": [
         {
-          "title": "刷街",
+          "title": "扫街",
           "description": "穿梭在大街小巷",
           "date": "2022/5",
           "url": "https://photo.wuyiting.cn/2022-05-%E6%9D%AD%E5%B7%9E-%E5%88%B7%E8%A1%97/DSC_3693.JPG",
           "children": [
+            {
+              "url": "https://photo.wuyiting.cn/2022-05-%E6%9D%AD%E5%B7%9E-%E5%88%B7%E8%A1%97/DSC_3486.JPG"
+            },
             {
               "url": "https://photo.wuyiting.cn/2022-05-%E6%9D%AD%E5%B7%9E-%E5%88%B7%E8%A1%97/DSC_3644.JPG"
             },
@@ -222,6 +225,9 @@
             },
             {
               "url": "https://photo.wuyiting.cn/2021-12-%E6%9D%AD%E5%B7%9E-%E9%9D%92%E5%B1%B1%E6%B9%96/DSC_3642.JPG"
+            },
+            {
+              "url": "https://photo.wuyiting.cn/2021-12-%E6%9D%AD%E5%B7%9E-%E9%9D%92%E5%B1%B1%E6%B9%96/DSC_3478.JPG"
             }
           ]
         },
@@ -256,6 +262,57 @@
               "url": "https://photo.wuyiting.cn/2021-11-%E6%9D%AD%E5%B7%9E-%E5%8D%97%E6%B9%96/DSC_3537.JPG"
             }
           ]
+        }
+      ]
+    },
+    {
+      "title": "兰溪",
+      "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3443.JPG",
+      "children": [
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3416.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3421.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3431.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3434.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3436.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3438.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3440.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3443.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3445.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3449.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3453.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3455.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3456.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3459.JPG"
+        },
+        {
+          "url": "https://photo.wuyiting.cn/2021-10-%E5%85%B0%E6%BA%AA/DSC_3460.JPG"
         }
       ]
     },
